--- a/app/views/environments/_instance_templates.html.erb
+++ b/app/views/environments/_instance_templates.html.erb
@@ -1,8 +1,11 @@
 <% resource_types.each do |resource_type| %>
   <div class="<%= resource_type.name %>-instance hide">
-      <%= image_tag("icons/#{resource_type.large_icon}", size: '60x60')%>
+    <%= image_tag("icons/#{resource_type.large_icon}", size: '60x60', class: 'instance-icon')%>
+    <div class="instance-type-label"></div>
+    <div style="clear:both"></div>
     <span class="instance-label">
       <%= resource_type.name %>
     </span>
+    <div class="connection-source" title="Start dragging for new connection from here." rel="tooltip" data-placement="right"></div>
   </div>
 <% end %>
