--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -18,3 +18,6 @@
 
 <!-- S3 resource  -->
 <%= render 's3_configuration', resource_type: ResourceType.find_by_resource_class('S3') %>
+
+<!-- ElastiCache resource  -->
+<%= render 'elasticache_configuration', resource_type: ResourceType.find_by_resource_class('ElastiCache') %>
