--- a/app/views/environments/_elasticache_configuration.html.erb
+++ b/app/views/environments/_elasticache_configuration.html.erb
@@ -1,18 +1,30 @@
-<div id="ec-configuration" class="modal hide fade in" style="display: none; ">
+<div id="<%= resource_type.name %>-configuration" class="modal hide fade in" style="display: none; ">
   <div class="modal-header">
     <a class="close" data-dismiss="modal">×</a>
-    <h3>EC instance configuration</h3>
+    <h3><%= resource_type.name %> instance configuration</h3>
   </div>
   <div class="modal-body">
-    <div id="ec-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '' , html: { id: 'ec-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'ec_label', class: 'instance_label'} %>
-      <%#= hidden_field_tag :ec_parents_list, ResourceType.find_by_name("EC").parents_list, :id => 'ec_parents_list'%>
+    <div id="<%= resource_type.name %>-config-error-messages"></div>
+    <%= simple_form_for Instance.new, url: "" , html: { id: "#{resource_type.name}-config-frm"} do |f|%>
+      <%= f.input :label, input_html: { id: "#{resource_type.name}_label", class: "instance_label"} %>
+      <div class="hide">
+      <%= select_tag "#{resource_type.name}_cache_security_group_names" , options_for_select([["default"]]), :include_blank => false %>
+      </div>
+      <div id="<%= resource_type.name %>_instance_type_id" class="hide"></div>
+      <label>Node Type</label>
+      <div id="<%= resource_type.name %>-slider">
+        <%= render "slider" %>
+      </div>
+      <p style="margin-top:60px;">Node Count</p>
+      <%= text_field_tag "#{resource_type.name}_node_count" %>
+      <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
+      <%= f.hidden_field(:xpos, id: "#{resource_type.name}_xpos")%>
+      <%= f.hidden_field(:ypos, id: "#{resource_type.name}_ypos")%>
   </div>
   <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
+    <%= f.button :submit, "Apply", class: "btn btn-success instance-config-submit" %>
     <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="ec_delete" onclick='delete_instance("ec");' title="Delete the ElastiCache resource">Delete</a>
+    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="<%= resource_type.name %>_delete" onclick='delete_instance("<%= resource_type.name %>");' title="Delete the <%= resource_type.name %> resource">Delete</a>
   </div>
   <% end %>
 </div>
