--- a/app/views/environments/_s3_configuration.html.erb
+++ b/app/views/environments/_s3_configuration.html.erb
@@ -6,7 +6,7 @@
   <div class="modal-body">
     <div id="<%= resource_type.name %>-config-error-messages"></div>
     <%= simple_form_for Instance.new, url: "" , html: { id: "#{resource_type.name}-config-frm"} do |f|%>
-      <%= f.input :label, label: 'Name', input_html: { id: "#{resource_type.name}_label", class: "instance_label"} %>
+      <%= f.input :label, input_html: { id: "#{resource_type.name}_label", class: "instance_label"} %>
       <%= f.input :access_control, label: 'Access Control', :include_blank => false, :collection => VisualCloudConfig[:s3_access_control], input_html: {id: "#{resource_type.name}_access_control"} %>
       <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
       <div class="row" style="margin-left:-10px;">
