--- a/app/views/environments/new.html.erb
+++ b/app/views/environments/new.html.erb
@@ -15,4 +15,5 @@ $(document).ready(function(){
 });
   var ec2InstanceTypes = JSON.parse('<%= raw @ec2_instance_types.to_json %>');
   var rdsInstanceTypes = JSON.parse('<%= raw @rds_instance_types.to_json %>');
+  var elastiCacheInstanceTypes = JSON.parse('<%= raw @elasticache_instance_types.to_json %>');
 </script>
