--- a/app/views/environments/edit.html.erb
+++ b/app/views/environments/edit.html.erb
@@ -32,4 +32,5 @@
   });
   var ec2InstanceTypes = JSON.parse('<%= raw @ec2_instance_types.to_json %>');
   var rdsInstanceTypes = JSON.parse('<%= raw @rds_instance_types.to_json %>');
+  var elastiCacheInstanceTypes = JSON.parse('<%= raw @elasticache_instance_types.to_json %>');
 </script>
