--- a/app/assets/javascripts/environment/instance.js.erb
+++ b/app/assets/javascripts/environment/instance.js.erb
@@ -16,9 +16,7 @@
     _setOption: function(key, value){
       if(key == 'label'){
         //setting the tooltip for the label in the dialog
-        this.element.find($('.instance-label')).attr('rel','tooltip');
-        this.element.find($('.instance-label')).attr('data-placement','bottom');
-        this.element.find($('.instance-label')).attr('title',value);
+        this.element.find($('.instance-label')).attr('data-original-title',value);
         var label = shortenLongStrings(value, <%= VisualCloudConfig[:strings_max_length] %>);
         this.element.find($('.instance-label')).html(label);
 
@@ -41,7 +39,8 @@
 
       //Set label of the instance
       var label = shortenLongStrings(options.label, <%= VisualCloudConfig[:strings_max_length] %>);
-      element.find($('.instance-label')).html('<a id=instance-label-' + instanceDivId + ' href="#" rel="tooltip" data-placement="bottom" title="' + options.label + '">' + label + '</a>');
+      element.find($('.instance-label')).attr('data-original-title',options.label);
+      element.find($('.instance-label')).html('<a id=instance-label-' + instanceDivId + ' href="#" >' + label + '</a>');
 
       //Set instance Type if it exists
       if(options.InstanceType){         
