background color removed and the setted the text color to white in table row if no records found #23108

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,7 +16,7 @@
         </tr>
       <% end %>
     <%else%>
-      <tr class="warning"><td colspan="2">You have not added a project yet.</td></tr>
+      <tr><td colspan="2">You have not added a project yet.</td></tr>
     <%end%>
   </tbody>
 </table>
