moved the access_control and ami_id fields into config attributes

--- a/app/assets/javascripts/environment/instance.js.erb
+++ b/app/assets/javascripts/environment/instance.js.erb
@@ -3,13 +3,11 @@
     options: {
       xpos: null,
       ypos: null,
-      amiId: null,
       InstanceType: null,
       instanceId: null,
       resourceType: '',
       ipAddress: '',
       publicDNS: '',
-      accessControl: '',
       configAttributes:{},
       label: ''
     },
@@ -88,7 +86,7 @@
       var xpos = element.offset().left - stage.offset().left ;
       var dom_id = element.attr('id');
       var parent_dom_ids = getParentDomIds(element);
-      return {xpos: xpos, ypos: ypos, label: options.label, access_control: options.accessControl, ami_id: options.amiId, instance_type_id: options.InstanceType, resource_type: options.resourceType, config_attributes: options.configAttributes, parent_dom_ids: parent_dom_ids, dom_id: dom_id };
+      return {xpos: xpos, ypos: ypos, label: options.label, instance_type_id: options.InstanceType, resource_type: options.resourceType, config_attributes: options.configAttributes, parent_dom_ids: parent_dom_ids, dom_id: dom_id };
     },
     getConfigurationDialogId: function(){
       return this.options.resourceType + '-configuration' ;
