--- a/app/views/environments/_ec2_type_resource_configuration.html.erb
+++ b/app/views/environments/_ec2_type_resource_configuration.html.erb
@@ -7,15 +7,28 @@
     <div id="<%=resource_type.name%>-config-error-messages"></div>
     <%= simple_form_for Instance.new, url: '', html: { id: "#{resource_type.name}-config-frm"} do |f|%>
       <%= f.input :label, input_html: { id: "#{resource_type.name}_label", class: 'instance_label'} %>
+      <% if  resource_type.name == "Java"%>
+      <p>Java Version</p>
+        <%= select_tag "#{resource_type.name}_version" , options_for_select(["default","test"]), :include_blank => false %>
+      <p>Tomcat Version</p>
+        <%= select_tag "#{resource_type.name}_tomcat_version" , options_for_select(["default","test"]), :include_blank => false %>
+      <%end%>
     <div id="<%=resource_type.name%>_instance_type_id" class="hide"></div>
     <label>Instance Type</label>
-      <div id="<%=resource_type.name%>-slider">
+      <div id="<%=resource_type.name%>-slider" class="relative_position">
         <%= render 'slider' %>
       </div>
-      <br />
-      <div id="<%=resource_type.name%>_ip_address"></div>
-      <br />
-      <div id="<%=resource_type.name%>_public_dns"></div>
+    <br />
+    <p style="margin-top:25px;">Elastic IP</p>
+    <div>
+      <input type="radio"  name="<%= resource_type.name %>_elasticIp" id="<%= resource_type.name %>_elastic_ip_new" value="0" onclick = 'display_exist_elastic_ip_list("<%= resource_type.name %>",0);'>&nbsp;&nbsp;Create new</input>&nbsp;&nbsp;
+      <input type="radio"  name="<%= resource_type.name %>_elasticIp" id="<%= resource_type.name %>_elastic_ip_list" value="1" onclick = 'display_exist_elastic_ip_list("<%= resource_type.name %>",1);'>&nbsp;&nbsp;Select from exist list</input>
+    </div>
+    <div class="hide" style="margin-top:10px;"><%= select_tag "#{resource_type.name}_elastic_ip_dropdown" , options_for_select(["default","test"]), :include_blank => false %></div>
+    <br />
+    <div id="<%=resource_type.name%>_ip_address"></div>
+    <br />
+    <div id="<%=resource_type.name%>_public_dns"></div>
       <%= hidden_field_tag :ami_id, Ami.first.id, :id => "#{resource_type.name}_ami_id"%>
       <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
       <%= f.hidden_field(:xpos, id: "#{resource_type.name}_xpos")%>
