--- a/app/views/environments/_toolbar.html.erb
+++ b/app/views/environments/_toolbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse">
 <div class="navbar-inner">
   <ul class="nav nav-pills">
-    <li><a id="graph-save" href="javascript:void(0)">Save</a></li>
+    <li><a id="graph-save" href="javascript:void(0)"><i class='icon-save'></i> Save</a></li>
   </ul> 
   <%= render 'project_environment' %> 
 </div>
