some classes added for removed inline styles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -131,3 +131,8 @@ div.graph-draggables-dock {
 .relative_position{
   position:relative;
 }
+
+.set_display_width{
+  display: inline-block;
+  width: 115px;
+}
