1)Committing Gemfile.lock with updated jqueryui version 2)Changed the icon of drag handle 3)Changed the color of connector to match drag handle color

--- a/app/views/environments/_instance_templates.html.erb
+++ b/app/views/environments/_instance_templates.html.erb
@@ -6,6 +6,6 @@
     <span class="instance-label" rel="tooltip" data-placement="bottom">
       <%= resource_type.name %>
     </span>
-    <div class="connection-source" title="Start dragging for new connection from here." rel="tooltip" data-placement="right"><i class='icon-move'></i></div>
+    <div class="connection-source" title="Start dragging for new connection from here." rel="tooltip" data-placement="right"><i class='icon-fullscreen'></i></div>
   </div>
 <% end %>
