--- a/app/views/environments/_edit_toolbar.html.erb
+++ b/app/views/environments/_edit_toolbar.html.erb
@@ -5,6 +5,7 @@
     <li><a id="graph-update" data-graph-id="<%=@environment.id%>" href="javascript:void(0);"><i class='icon-save'></i> Save</a></li>
     <li><a id="graph-provision" data-graph-id="<%=@environment.id%>" href="javascript:void(0);"><i class='icon-cloud-upload'></i> Provision</a></li>
     <li><a id="graph-replicate" href="javascript:void(0);"><i class='icon-copy'></i>Replicate</a></li>
+    <li><%= link_to 'Export To CSV', export_csv_path(:id => @environment.id) %></li>
   </ul> 
   <%= render 'project_environment' %> 
 </div>
